# kailash-coc-claude-py

./: .coc-sync-marker  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: .coc-obsoleted  .coc-sync-marker  VERSION  settings.json
.claude/agents/: README.md  _README.md  deep-analyst.md  documentation-validator.md  framework-advisor.md  gold-standards-validator.md  sdk-navigator.md  security-reviewer.md  tdd-implementer.md  testing-specialist.md  value-auditor.md
.claude/agents/frameworks/: dataflow-specialist.md  infrastructure-specialist.md  kaizen-specialist.md  mcp-specialist.md  ml-specialist.md  nexus-specialist.md  pact-specialist.md
.claude/agents/frontend/: frontend-developer.md
.claude/agents/management/: git-release-specialist.md  todo-manager.md
.claude/agents/standards/: coc-expert.md  eatp-expert.md
.claude/commands/: ai.md  analyze.md  codify.md  db.md  design.md  i-audit.md  implement.md  redteam.md  release.md  sync-to-build.md  test.md  validate.md
.claude/rules/: agents.md  build-repo-release-discipline.md  e2e-god-mode.md  eatp.md  env-models.md  git.md  infrastructure-sql.md  pact-governance.md  python-environment.md  security.md  testing.md  trust-plane-security.md  zero-tolerance.md
.github/workflows/: validate.yml
instructions/: 01-analyze.md  02-todos.md  03-implement.md
instructions/02-plans/: 00-initial-setup.md
instructions/03-implement/: 00-initial-implement.md
instructions/05-validation/: 00-initial-validate.md
scripts/hooks/: session-start.js  validate-workflow.js
sdk-users/: README.md
sdk-users/5-enterprise/: gateway-patterns.md
sdk-users/apps/: README.md
tests/sdk/: test_sdk_patterns.py
(+249 files in other folders)
